<resources>
    <string name="app_name">InstantCarReco</string>
    <string name="car_list">Car List</string>
    <string name="detect_object">Detect</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="registered">Already Registered? Login here</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome to InstantCarReco</string>
    <string name="login">Login</string>
    <string name="new_account">Not have an account? Signup Here \n or press the button below to sign in with Google</string>
    <string name="logout">Logout</string>
    <string name="result">result</string>
    <string name="choose">Choose IMG</string>
    <string name="user">Name</string>
    <string name="comment">Comment</string>
    <string name="year">Year</string>
    <string name="model">Model</string>
    <string name="manufacture">Manufacture</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="order_by_date">Order by date</string>
    <string name="order_by_rating">Order by rating</string>
    <string name="order_by_manufacture">Order by manufacture</string>
    <string name="flash">FLASH</string>
    <string name="save_all_results">Save all results</string>
    <string name="order_by_production_year">Order by production year</string>
</resources>
